

-------------------------------------------------------------------
1.9.1:
-Basic security for config.php
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.2:
-Added Upbit markets support
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.3:
-Minor semantics / GUI cleanup
-Additional coinmarketcap data, per coin
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.4:
-Added Kucoin API support
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.5:
-Added ICO designation ability per asset in configuration file
-Added link to SEC statement on ICOs, for ICO-designated assets
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.6:
-Added ethfinex support
-Optimized ethfinex / bitfinex API calls
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.7:
-Added Decred mining calculator
-Revised mining calculators to include block reward field
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.8:
-Tweaks
-------------------------------------------------------------------


-------------------------------------------------------------------
1.9.9:
-Major semantics cleanup
-Built front end GUI for additional LTC / ETH / USDT market pairings support (that was already built into back end)
-Minor optimizations
-------------------------------------------------------------------





















































